--- a/complete.html
+++ b/complete.html
@@ -1,1 +1,34 @@
+<!doctype html>
+<html lang="ko">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>『요즘 중남미 IP』 구독 완료</title>
+  <link rel="stylesheet" href="assets/styles.css" />
+</head>
+<body>
+  <main class="container">
+    <h1>『요즘 중남미 IP』 구독 완료</h1>
+
+    <div class="result-card" id="resultBox">
+      <p><strong>이름:</strong> <span id="rName"></span></p>
+      <p><strong>소속:</strong> <span id="rCompany"></span></p>
+      <p><strong>이메일:</strong> <span id="rEmail"></span></p>
+    </div>
+
+    <footer>
+      <p>본 뉴스레터는 비상업적 목적으로 운영되며, 언제든지 구독 해지가 가능합니다.<br />
+      문의: <a href="mailto:neotoday.center@gmail.com">neotoday.center@gmail.com</a></p>
+      <p>© 2025 Mondo City IP Center</p>
+    </footer>
+  </main>
+
+  <script>
+    const params = new URLSearchParams(window.location.search);
+    document.getElementById('rName').textContent = params.get('name') || '';
+    document.getElementById('rCompany').textContent = params.get('company') || '';
+    document.getElementById('rEmail').textContent = params.get('email') || '';
+  </script>
+</body>
+</html>
 
