--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </form>
 
     <footer>
-      <p>본 뉴스레터는 비상업적 목적으로 운영되며, 언제든지 구독 해지가 가능합니다.<br />
-      문의: <a href="mailto:neotoday.center@gmail.com">neotoday.center@gmail.com</a></p>
-      <p>© 2025 Mondo City IP Center</p>
+      <p>본 본 구독 신청은 뉴스레터 발송을 위한 최소한의 정보만 수집하며 언제든지 수신 거부 가능합니다.<br />
+      문의: <a href="mailto:mexicocity_ipcenter@koipa.re.kr">mexicocity_ipcenter@koipa.re.kr</a></p>
+      <p>© 2025 KOIPA Mexico City IP Center</p>
     </footer>
   </main>
 
