--- a/index.html
+++ b/index.html
@@ -2,33 +2,67 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>『요즘 중남미 IP』 구독 신청</title>
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
   <main class="container">
-    <h1>『요즘 중남미 IP』 구독 신청</h1>
+    <!-- 1) 상단 헤더 -->
+    <h1>요즘 중남미 IP</h1>
+    <p class="subtitle">한국지식재산보호원 멕시코시티 IP센터 뉴스레터</p>
+    <p class="tagline">중남미 최신 IP 판례·제도·이슈를 한눈에</p>
 
-    <p class="desc">중남미 IP 트렌드 뉴스레터 <strong>요즘 중남미 IP</strong>를 받아보세요.</p>
+    <!-- 2) 본문 소개 -->
+    <section class="intro">
+      <p>매월 1회, 한국기업을 위한 중남미 주요 IP 뉴스·분석을 전해드립니다.<br>
+      구독하시면 최신 판례·제도 동향과 센터 소식을 이메일로 받아보실 수 있습니다.</p>
+    </section>
 
-    <form id="subscribeForm">
-      <label>이름<input type="text" name="name" required /></label>
-      <label>소속<input type="text" name="company" required /></label>
-      <label>이메일<input type="email" name="email" required /></label>
+    <!-- 3) 구독 폼 -->
+    <section class="card">
+      <h2>📬 뉴스레터 구독 신청</h2>
+      <form id="subscribeForm" novalidate>
+        <label>이름
+          <input type="text" name="name" required />
+        </label>
+        <label>소속
+          <input type="text" name="company" required />
+        </label>
+        <label>이메일
+          <input type="email" name="email" required />
+        </label>
 
-      <label class="consent">
-        <input type="checkbox" name="consent" required />
-        개인정보 수집 및 이용에 동의합니다.
-      </label>
+        <fieldset class="checks">
+          <legend>(선택) 관심국가</legend>
+          <label><input type="checkbox" name="interests" value="멕시코"> 멕시코</label>
+          <label><input type="checkbox" name="interests" value="브라질"> 브라질</label>
+          <label><input type="checkbox" name="interests" value="칠레"> 칠레</label>
+          <label><input type="checkbox" name="interests" value="콜롬비아"> 콜롬비아</label>
+          <label><input type="checkbox" name="interests" value="아르헨티나"> 아르헨티나</label>
+          <label><input type="checkbox" name="interests" value="페루"> 페루</label>
+        </fieldset>
 
-      <button type="submit" class="btn-primary">구독하기</button>
-    </form>
+        <label class="consent">
+          <input type="checkbox" name="consent" required />
+          개인정보 수집 및 이용에 동의합니다.
+        </label>
 
-    <footer>
-      <p>본 본 구독 신청은 뉴스레터 발송을 위한 최소한의 정보만 수집하며 언제든지 수신 거부 가능합니다.<br />
+        <button type="submit" class="btn-primary" id="submitBtn">구독 신청하기</button>
+        <p class="form-msg" id="formMsg" aria-live="polite"></p>
+      </form>
+    </section>
+
+    <!-- 4) 개인정보 안내 -->
+    <section class="notice">
+      <p>본 구독 신청은 뉴스레터 발송을 위한 최소한의 정보만 수집하며,<br>
+      언제든지 수신 거부 가능합니다.<br>
       문의: <a href="mailto:mexicocity_ipcenter@koipa.re.kr">mexicocity_ipcenter@koipa.re.kr</a></p>
-      <p>© 2025 KOIPA Mexico City IP Center</p>
+    </section>
+
+    <!-- 5) 하단 -->
+    <footer>
+      © 2025 KOIPA Mexico City IP Center
     </footer>
   </main>
 
