--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main class="container">
-    <!-- 1) 상단 헤더 -->
+    <!-- 1) 상단 헤더 (브랜드 신뢰 확보) -->
     <h1>요즘 중남미 IP</h1>
     <p class="subtitle">한국지식재산보호원 멕시코시티 IP센터 뉴스레터</p>
     <p class="tagline">중남미 최신 IP 판례·제도·이슈를 한눈에</p>
@@ -19,7 +19,7 @@
       구독하시면 최신 판례·제도 동향과 센터 소식을 이메일로 받아보실 수 있습니다.</p>
     </section>
 
-    <!-- 3) 구독 폼 -->
+    <!-- 3) 구독 폼 (핵심) -->
     <section class="card">
       <h2>📬 뉴스레터 구독 신청</h2>
       <form id="subscribeForm" novalidate>
@@ -61,9 +61,7 @@
     </section>
 
     <!-- 5) 하단 -->
-    <footer>
-      © 2025 KOIPA Mexico City IP Center
-    </footer>
+    <footer>© 2025 KOIPA Mexico City IP Center</footer>
   </main>
 
   <script src="assets/script.js"></script>
