--- a/index.html
+++ b/index.html
@@ -1,69 +1,49 @@
 <!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>『요즘 중남미 IP』 구독 신청</title>
-  <link rel="stylesheet" href="assets/styles.css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>뉴스레터 구독</title>
+  <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
   <main class="container">
-    <!-- 1) 상단 헤더 (브랜드 신뢰 확보) -->
-    <h1>요즘 중남미 IP</h1>
-    <p class="subtitle">한국지식재산보호원 멕시코시티 IP센터 뉴스레터</p>
-    <p class="tagline">중남미 최신 IP 판례·제도·이슈를 한눈에</p>
+    <h1>『요즘 중남미 IP』 구독 신청</h1>
 
-    <!-- 2) 본문 소개 -->
-    <section class="intro">
-      <p>매월 1회, 한국기업을 위한 중남미 주요 IP 뉴스·분석을 전해드립니다.<br>
-      구독하시면 최신 판례·제도 동향과 센터 소식을 이메일로 받아보실 수 있습니다.</p>
-    </section>
+    <form 
+      action="https://script.google.com/macros/s/AKfycbzmMo9uep-ZMQFOLwGEhbh4U7TVv3FodbOCacFv1rVe2saw4QRPQDhhghET7rqSOIa0/exec"
+      method="POST"
+      target="hidden_iframe"
+      id="subscribeForm"
+      onsubmit="submitted=true;"
+    >
+      <label>이름 <input name="name" required></label>
+      <label>소속 <input name="company" required></label>
+      <label>이메일 <input name="email" type="email" required></label>
 
-    <!-- 3) 구독 폼 (핵심) -->
-    <section class="card">
-      <h2>📬 뉴스레터 구독 신청</h2>
-      <form id="subscribeForm" novalidate>
-        <label>이름
-          <input type="text" name="name" required />
-        </label>
-        <label>소속
-          <input type="text" name="company" required />
-        </label>
-        <label>이메일
-          <input type="email" name="email" required />
-        </label>
+      <fieldset>
+        <legend>관심국가</legend>
+        <label><input type="checkbox" name="interests" value="멕시코">멕시코</label>
+        <label><input type="checkbox" name="interests" value="브라질">브라질</label>
+      </fieldset>
 
-        <fieldset class="checks">
-          <legend>(선택) 관심국가</legend>
-          <label><input type="checkbox" name="interests" value="멕시코"> 멕시코</label>
-          <label><input type="checkbox" name="interests" value="브라질"> 브라질</label>
-          <label><input type="checkbox" name="interests" value="칠레"> 칠레</label>
-          <label><input type="checkbox" name="interests" value="콜롬비아"> 콜롬비아</label>
-          <label><input type="checkbox" name="interests" value="아르헨티나"> 아르헨티나</label>
-          <label><input type="checkbox" name="interests" value="페루"> 페루</label>
-        </fieldset>
+      <label><input type="checkbox" name="consent" required>개인정보 수집에 동의</label>
+      <button type="submit">구독 신청하기</button>
+    </form>
 
-        <label class="consent">
-          <input type="checkbox" name="consent" required />
-          개인정보 수집 및 이용에 동의합니다.
-        </label>
-
-        <button type="submit" class="btn-primary" id="submitBtn">구독 신청하기</button>
-        <p class="form-msg" id="formMsg" aria-live="polite"></p>
-      </form>
-    </section>
-
-    <!-- 4) 개인정보 안내 -->
-    <section class="notice">
-      <p>본 구독 신청은 뉴스레터 발송을 위한 최소한의 정보만 수집하며,<br>
-      언제든지 수신 거부 가능합니다.<br>
-      문의: <a href="mailto:mexicocity_ipcenter@koipa.re.kr">mexicocity_ipcenter@koipa.re.kr</a></p>
-    </section>
-
-    <!-- 5) 하단 -->
-    <footer>© 2025 KOIPA Mexico City IP Center</footer>
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
   </main>
 
-  <script src="assets/script.js"></script>
+  <script>
+    let submitted = false;
+    // 폼 제출 후 완료 페이지로 리디렉션
+    document.getElementById("subscribeForm").addEventListener("submit", function() {
+      setTimeout(() => {
+        if (submitted) {
+          window.location.href = "complete.html";
+        }
+      }, 500);
+    });
+  </script>
 </body>
 </html>
