--- a/index.html
+++ b/index.html
@@ -1,47 +1,86 @@
 <!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>뉴스레터 구독</title>
-  <link rel="stylesheet" href="assets/styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>『요즘 중남미 IP』 구독 신청</title>
+  <link rel="stylesheet" href="./assets/style.css" />
+  <meta name="robots" content="noindex">
 </head>
 <body>
-  <main class="container">
-    <h1>『요즘 중남미 IP』 구독 신청</h1>
+  <main class="wrap">
+    <header class="page-head">
+      <h1>『요즘 중남미 IP』 구독 신청</h1>
+      <p class="lead">
+        한국지식재산보호원 멕시코시티 IP센터 뉴스레터<br />
+        중남미 최신 IP 판례·제도·이슈를 한눈에
+      </p>
+    </header>
 
-  <form 
-    action=https://script.google.com/macros/s/AKfycbwwByrN2B1h4ikA4Rfaqh9RUXs_yrWvPU4MjDff2uQpmV7lExSQxm52P2LalWw-l9nM/exec"
-    method="POST"
-    id="subscribeForm"
-  >  
-      <label>이름 <input name="name" required></label>
-      <label>소속 <input name="company" required></label>
-      <label>이메일 <input name="email" type="email" required></label>
+    <section class="usp">
+      <div class="chip">
+        <b>매월 1회</b>
+        <span>한국 기업을 위한 중남미 주요 IP 뉴스 및 분석을 전해드립니다.</span>
+      </div>
+      <div class="chip">
+        <b>구독 동의</b>
+        <span>최신 판례·제도 동향, 센터 소식을 이메일로 받아보실 수 있습니다.</span>
+      </div>
+    </section>
 
-      <fieldset>
-        <legend>관심국가</legend>
-        <label><input type="checkbox" name="interests" value="멕시코">멕시코</label>
-        <label><input type="checkbox" name="interests" value="브라질">브라질</label>
+    <form id="subscribe-form" class="card" novalidate>
+      <!-- 스팸 방지: 허니팟 -->
+      <div class="hp">
+        <label for="company_hp">회사명(작성 금지)</label>
+        <input id="company_hp" name="company_hp" type="text" autocomplete="organization" />
+      </div>
+
+      <div class="field">
+        <label for="name">이름 <span class="en">Name</span></label>
+        <input id="name" name="name" type="text" placeholder="홍길동" autocomplete="name" />
+      </div>
+
+      <div class="field">
+        <label for="company">소속 <span class="en">Company</span></label>
+        <input id="company" name="company" type="text" placeholder="한국지식재산보호원" autocomplete="organization" />
+      </div>
+
+      <div class="field">
+        <label for="email">이메일 <span class="en">Email</span> <span class="req">*</span></label>
+        <input id="email" name="email" type="email" placeholder="you@example.com" required autocomplete="email" />
+      </div>
+
+      <!-- 선택) 관심국가 -->
+      <fieldset class="field">
+        <legend>관심 국가 (선택)</legend>
+        <div class="checks">
+          <label><input type="checkbox" name="countries" value="멕시코"> 멕시코</label>
+          <label><input type="checkbox" name="countries" value="브라질"> 브라질</label>
+          <label><input type="checkbox" name="countries" value="칠레"> 칠레</label>
+          <label><input type="checkbox" name="countries" value="콜롬비아"> 콜롬비아</label>
+          <label><input type="checkbox" name="countries" value="아르헨티나"> 아르헨티나</label>
+        </div>
       </fieldset>
 
-      <label><input type="checkbox" name="consent" required>개인정보 수집에 동의</label>
-      <button type="submit">구독 신청하기</button>
+      <input type="hidden" name="source" value="github-pages" />
+
+      <button id="submit-btn" type="submit" class="primary">구독하기</button>
+      <p id="status" class="status" role="status" aria-live="polite"></p>
     </form>
 
-    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
+    <footer class="page-foot">
+      <p class="privacy">
+        본 구독 신청은 뉴스레터 발송을 위한 최소한의 정보만 수집하며 언제든지 수신 거부가 가능합니다.<br />
+        문의 : <a href="mailto:mexicocity_ipcenter@koipa.re.kr">mexicocity_ipcenter@koipa.re.kr</a>
+      </p>
+      <small>© 2025 KOIPA Mexico City IP Center</small>
+    </footer>
   </main>
 
-  <!--<script>
-    let submitted = false;
-    // 폼 제출 후 완료 페이지로 리디렉션
-    document.getElementById("subscribeForm").addEventListener("submit", function() {
-      setTimeout(() => {
-        if (submitted) {
-          window.location.href = "complete.html";
-        }
-      }, 500);
-    });
-  </script>-->
+  <script>
+    window.OPPA_NEWSLETTER_ENDPOINT =
+      "https://script.google.com/macros/s/AKfycbwI0A-B819UVyiscv3KtxxF8BkuEATODuUJ2ZVFwMIgXDHsdWEEnGmCeLbY9mMr4Nun/exec";
+  </script>
+  <script src="./assets/app.js"></script>
 </body>
 </html>
