--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
       </p>
     </header>
 
-    <!-- USP -->
-    <section class="usp">
-      <div class="chip-info filled">
-        <span class="chip-badge">매월 1회</span>
+    <!-- USP (리뉴얼) -->
+    <section class="usp2">
+      <article class="usp-card fill">
+        <h3>매월 1회</h3>
         <p>한국 기업을 위한 중남미 주요 IP 뉴스 및 분석을 전해드립니다.</p>
-      </div>
-      <div class="chip-info outlined">
-        <span class="chip-badge">구독 동의</span>
+      </article>
+      <article class="usp-card line">
+        <h3>구독 동의</h3>
         <p>최신 판례·제도 동향, 센터 소식을 이메일로 받아보실 수 있습니다.</p>
-      </div>
+      </article>
     </section>
 
     <!-- 구독 폼 -->
@@ -55,18 +55,12 @@
         <p class="error" id="err_email"></p>
       </div>
 
-      <!-- 관심 국가: 칩 + 더보기 -->
+      <!-- 관심 국가: 칩 + 더보기 + 기타(인라인 변신) -->
       <div class="field">
         <span class="legend">관심 국가 (중복 선택 가능)</span>
 
         <div class="chips" id="countries_chips" role="group" aria-label="관심 국가">
           <!-- 칩은 app.js에서 렌더링 -->
-        </div>
-
-        <!-- 기타 인라인 pill -->
-        <div id="chip_other_input" class="chip-input hide">
-          <input type="text" id="country_other" placeholder="관심 국가를 입력해 주세요." aria-label="기타 국가 입력" />
-          <button type="button" id="chip_other_clear" class="chip-clear" aria-label="기타 입력 지우기">×</button>
         </div>
       </div>
 
@@ -89,6 +83,6 @@
     window.OPPA_NEWSLETTER_ENDPOINT =
       "https://script.google.com/macros/s/AKfycbwI0A-B819UVyiscv3KtxxF8BkuEATODuUJ2ZVFwMIgXDHsdWEEnGmCeLbY9mMr4Nun/exec";
   </script>
-  <script src="./assets/app.js?v=20251009-6"></script>
+  <script src="./assets/app.js?v=20251009-7"></script>
 </body>
 </html>
