--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>한국 기업을 위한 중남미 주요 IP 뉴스 및 분석을 전해드립니다.</p>
       </article>
       <article class="usp-card line">
-        <h3>구독 동의</h3>
+        <h3>구독을 통해</h3>
         <p>최신 판례·제도 동향, 센터 소식을 이메일로 받아보실 수 있습니다.</p>
       </article>
     </section>
