--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <p>한국 기업을 위한 중남미 주요 IP 뉴스 및 분석을 전해드립니다.</p>
       </article>
       <article class="usp-card line">
-        <h3>구독을 통해</h3>
-        <p>최신 판례·제도 동향, 센터 소식을 이메일로 받아보실 수 있습니다.</p>
+        <h3>구독 동의 시</h3>
+        <p>최신 판례·제도 동향, 센터 소식을<br />이메일로 받아보실 수 있습니다.</p>
       </article>
     </section>
 
@@ -70,12 +70,13 @@
       <p id="status" class="status" role="status" aria-live="polite"></p>
     </form>
 
+    <!-- 🆕 Footer 구조 업데이트 -->
     <footer class="page-foot">
-      <p class="privacy">
-        본 구독 신청은 뉴스레터 발송을 위한 최소한의 정보만 수집하며 언제든지 수신 거부가 가능합니다.<br />
-        문의 : mexicocity_ipcenter@koipa.re.kr
-      </p>
-      <small>© 2025 KOIPA Mexico City IP Center</small>
+      <p class="privacy">본 구독 신청은 뉴스레터 발송을 위한 최소한의 정보만 수집하며 언제든지 수신 거부가 가능합니다.</p>
+      <div class="foot-row">
+        <span class="contact">문의 : mexicocity_ipcenter@koipa.re.kr</span>
+        <span class="copy">© 2025 KOIPA Mexico City IP Center</span>
+      </div>
     </footer>
   </main>
 
@@ -83,6 +84,6 @@
     window.OPPA_NEWSLETTER_ENDPOINT =
       "https://script.google.com/macros/s/AKfycbwI0A-B819UVyiscv3KtxxF8BkuEATODuUJ2ZVFwMIgXDHsdWEEnGmCeLbY9mMr4Nun/exec";
   </script>
-  <script src="./assets/app.js?v=20251009-7"></script>
+  <script src="./assets/app.js?v=20251009-8"></script>
 </body>
 </html>
