--- a/success.html
+++ b/success.html
@@ -6,6 +6,7 @@
   <title>『요즘 중남미 IP』 구독 완료</title>
   <link rel="stylesheet" href="./assets/style.css" />
   <meta name="robots" content="noindex">
+
   <script>
     (function(){
       const ok = sessionStorage.getItem("oppa_newsletter_ok");
@@ -29,12 +30,13 @@
       </dl>
     </section>
 
+    <!-- ✅ footer 구조 index.html 동일 -->
     <footer class="page-foot">
-      <p class="privacy">
-        본 구독 신청은 뉴스레터 발송을 위한 최소한의 정보만 수집하며 언제든지 수신 거부가 가능합니다.<br />
-        문의 : mexicocity_ipcenter@koipa.re.kr
-      </p>
-      <small>© 2025 KOIPA Mexico City IP Center</small>
+      <p class="privacy">본 구독 신청은 뉴스레터 발송을 위한 최소한의 정보만 수집하며 언제든지 수신 거부가 가능합니다.</p>
+      <div class="foot-row">
+        <span class="contact">문의 : mexicocity_ipcenter@koipa.re.kr</span>
+        <span class="copy">© 2025 KOIPA Mexico City IP Center</span>
+      </div>
     </footer>
   </main>
 
