--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </main>
 
   <script>
-    window.OPPA_NEWSLETTER_ENDPOINT =
+    window.NEWSLETTER_ENDPOINT =
       "https://script.google.com/macros/s/AKfycbwI0A-B819UVyiscv3KtxxF8BkuEATODuUJ2ZVFwMIgXDHsdWEEnGmCeLbY9mMr4Nun/exec";
   </script>
   <script src="./assets/app.js?v=20251009-8"></script>
