--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>『요즘 중남미 IP』 구독 신청</title>
+
+  <!-- 기본 스타일 -->
   <link rel="stylesheet" href="./assets/style.css" />
-  <meta name="robots" content="noindex">
+
+  <!-- 검색엔진 제외 -->
+  <meta name="robots" content="noindex" />
+
+  <!-- 파비콘 -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon.png" />
+  <link rel="shortcut icon" href="./assets/favicon.png" />
+
+  <!-- 기본 메타 -->
+  <meta name="theme-color" content="#5CA1D1" />
+  <meta name="description" content="한국지식재산보호원 멕시코시티 IP센터 뉴스레터 구독 신청 페이지입니다." />
 </head>
 <body>
   <main class="wrap">
@@ -54,9 +67,7 @@
 
       <div class="field">
         <span class="legend">관심 국가 (중복 선택 가능)</span>
-
-        <div class="chips" id="countries_chips" role="group" aria-label="관심 국가">
-        </div>
+        <div class="chips" id="countries_chips" role="group" aria-label="관심 국가"></div>
       </div>
 
       <input type="hidden" name="source" value="github-pages" />
@@ -66,7 +77,9 @@
     </form>
 
     <footer class="page-foot">
-      <p class="privacy">본 구독 신청은 뉴스레터 발송을 위한 최소한의 정보만 수집하며 언제든지 수신 거부가 가능합니다.</p>
+      <p class="privacy">
+        본 구독 신청은 뉴스레터 발송을 위한 최소한의 정보만 수집하며 언제든지 수신 거부가 가능합니다.
+      </p>
       <div class="foot-row">
         <span class="contact">문의 : mexicocity_ipcenter@koipa.re.kr</span>
         <span class="copy">© 2025 KOIPA Mexico City IP Center</span>
