--- a/index.html
+++ b/index.html
@@ -3,23 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>『요즘 중남미 IP』 구독 신청</title>
+  <title>『요즘 중남미 IP』 구독</title>
 
-  <!-- 기본 스타일 -->
-  <link rel="stylesheet" href="./assets/style.css" />
-
-  <!-- 검색엔진 제외 -->
-  <meta name="robots" content="noindex" />
-
-  <!-- 파비콘 -->
+  <!-- Favicon (모든 페이지 공통) -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon.png" />
   <link rel="shortcut icon" href="./assets/favicon.png" />
 
-  <!-- 기본 메타 -->
+  <meta name="robots" content="noindex" />
   <meta name="theme-color" content="#5CA1D1" />
-  <meta name="description" content="한국지식재산보호원 멕시코시티 IP센터 뉴스레터 구독 신청 페이지입니다." />
+  <meta name="description" content="한국지식재산보호원 멕시코시티 IP센터 뉴스레터 구독 페이지" />
+  <link rel="stylesheet" href="./assets/style.css" />
 </head>
+
 <body>
   <main class="wrap">
     <header class="page-head">
@@ -71,7 +67,6 @@
       </div>
 
       <input type="hidden" name="source" value="github-pages" />
-
       <button id="submit-btn" type="submit" class="primary">구독하기</button>
       <p id="status" class="status" role="status" aria-live="polite"></p>
     </form>
