--- a/success.html
+++ b/success.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>『요즘 중남미 IP』 구독 완료</title>
+  <title>『요즘 중남미 IP』 구독</title>
+
+  <!-- Favicon (공통) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon.png" />
+  <link rel="shortcut icon" href="./assets/favicon.png" />
+
+  <meta name="robots" content="noindex" />
+  <meta name="theme-color" content="#5CA1D1" />
+  <meta name="description" content="『요즘 중남미 IP』 뉴스레터 구독 완료 페이지" />
   <link rel="stylesheet" href="./assets/style.css" />
-  <meta name="robots" content="noindex">
 
   <script>
     (function(){
@@ -15,6 +23,7 @@
     })();
   </script>
 </head>
+
 <body>
   <main class="wrap">
     <header class="page-head">
@@ -31,7 +40,9 @@
     </section>
 
     <footer class="page-foot">
-      <p class="privacy">본 구독 신청은 뉴스레터 발송을 위한 최소한의 정보만 수집하며 언제든지 수신 거부가 가능합니다.</p>
+      <p class="privacy">
+        본 구독 신청은 뉴스레터 발송을 위한 최소한의 정보만 수집하며 언제든지 수신 거부가 가능합니다.
+      </p>
       <div class="foot-row">
         <span class="contact">문의 : mexicocity_ipcenter@koipa.re.kr</span>
         <span class="copy">© 2025 KOIPA Mexico City IP Center</span>
