--- a/index.html
+++ b/index.html
@@ -66,6 +66,26 @@
         <div class="chips" id="countries_chips" role="group" aria-label="관심 국가"></div>
       </div>
 
+      <!-- ✅ 개인정보 수집·이용 동의 (필수) -->
+      <section class="privacy-consent card-lite" aria-labelledby="privacy_title">
+        <p id="privacy_title" class="privacy-title">📄 개인정보 수집·이용 동의 <span class="req">(필수)</span></p>
+        <p class="privacy-desc">
+          한국지식재산보호원 멕시코시티 IP센터는 뉴스레터 발송을 위해 아래의 개인정보를 수집·이용합니다.
+        </p>
+        <ul class="privacy-list">
+          <li><strong>수집항목:</strong> 이름, 소속, 이메일, 관심 국가</li>
+          <li><strong>이용목적:</strong> 뉴스레터 발송 및 관련 안내</li>
+          <li><strong>보유기간:</strong> 구독 해지 시까지</li>
+        </ul>
+
+        <label class="privacy-checkbox">
+          <input id="consent" name="consent" type="checkbox" />
+          <span>위 내용을 확인하였으며, 개인정보 수집·이용에 동의합니다.</span>
+        </label>
+        <p class="error" id="err_consent"></p>
+      </section>
+      <!-- /개인정보 동의 -->
+
       <input type="hidden" name="source" value="github-pages" />
       <button id="submit-btn" type="submit" class="primary">구독하기</button>
       <p id="status" class="status" role="status" aria-live="polite"></p>
